# pngtools

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  typos.toml
.github/: demo.cast
.github/workflows/: pytest.yml  typos.yml
pngtools/: __init__.py  bmp.py  cli.py  lib.py  ppm.py
pngtools-rs/: Cargo.toml  README.md
pngtools-rs/src/: lib.rs  main.rs
tests/: 511-200x300.ppm  test_lib.py
