[package]
name = "pngtools"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "pngtools in Rust with Python bindings"
keywords = ["png", "pngtools", "image", "cli"]
categories = ["command-line-utilities", "multimedia"]
repository = "https://github.com/Its-Just-Nans/pngtools"
homepage = "https://github.com/Its-Just-Nans/pngtools"

[dependencies]
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
